<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingTop="175dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:text="@string/quizappTVMA"
        android:textColor="#FFF3E0"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="14dp"
                android:text="@string/welcomeTVMA"
                android:textColor="#3E3C3C"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/please_enter_your_nameTVMA"
                android:textColor="#737070"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_Name"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#A3A0A0"
                android:ems="5"
                android:hint="@string/nameHintTVMA"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#B20B0A0A"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_Start"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#9F971B48"
                android:textColor="@color/white"
                android:text="@string/btnStartTVMA" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>